test/corpus/string.txt
================================================================================
literal string
================================================================================
(foo)
--------------------------------------------------------------------------------
(document
  (string
    (literal_string)))

================================================================================
literal string with balanced parenthesis
================================================================================
(foo (bar) baz)
--------------------------------------------------------------------------------
(document
  (string
    (literal_string)))

================================================================================
literal string with escaped parenthesis
================================================================================
(foo \))
--------------------------------------------------------------------------------
(document
  (string
    (literal_string)
    (escape_sequence)))

================================================================================
literal string with escaped newline
================================================================================
(foo \
bar)
--------------------------------------------------------------------------------
(document
  (string
    (literal_string)
    (escape_sequence)
    (literal_string)))

================================================================================
literal string with escaped character
================================================================================
(foo \n bar)
--------------------------------------------------------------------------------
(document
  (string
    (literal_string)
    (escape_sequence)
    (literal_string)))

================================================================================
literal string with escaped octal character
================================================================================
(foo \010 bar)
--------------------------------------------------------------------------------
(document
  (string
    (literal_string)
    (escape_sequence)
    (literal_string)))

================================================================================
hexadecimal string
================================================================================
<deadbeef>
--------------------------------------------------------------------------------
(document
  (string
    (hexadecimal_string)))

================================================================================
base85 string
================================================================================
<~
  !"#$%&()*+,/./
  0123456789
  :;<=>?@
  ABCDEFGHIJKLMNOPQRSTUVWXYZ
  [\]^_`
  abcdefghijklmnopqrstu
~>
--------------------------------------------------------------------------------
(document
  (string
    (base85_string)
    (base85_string)
    (base85_string)
    (base85_string)
    (base85_string)
    (base85_string)))
